--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^0.16.1
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.16
+  flutter_facebook_login: ^3.0.0
   google_sign_in: ^4.5.1
   flutter_bloc: ^4.0.1
   equatable: ^1.2.0
