--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   firebase_analytics: ^5.0.16
   flutter_facebook_login: ^3.0.0
   google_sign_in: ^4.5.1
-  flutter_bloc: ^4.0.1
+  flutter_bloc: ^5.0.0
+  bloc: ^5.0.0
   equatable: ^1.2.0
   dartz: ^0.9.1
   get_it: ^4.0.2
@@ -42,7 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  bloc_test: ^5.1.0
+  bloc_test: ^6.0.0
   mockito: ^4.1.1
 
 # For information on the generic Dart part of this file, see the
