--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   google_sign_in: ^4.5.1
   flutter_bloc: ^6.0.1
-  bloc: ^6.0.1
   equatable: ^1.2.3
   dartz: ^0.9.1
   get_it: ^4.0.2
   cloud_firestore: ^0.13.7
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_test:
