--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ flutter:
     - family: Questrial
       fonts:
         - asset: assets/fonts/Questrial-Regular.ttf
+    - family: SFPro
+      fonts:
+        - asset: assets/fonts/FontsFree-Net-SFProText-Regular.ttf
       
          
     
